test/fails/bad_parsing/bad_function13.lgl
void foo() {
    return;
}; // Extra semicolon

void main() {
    return;
}